gccida/g2/store_split_bit_field
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_split_bit_field/src/expmed.c:1349:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v22; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_split_bit_field/src/expmed.c:1359:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v7 = ( __int64)op0[1]; 
               ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_split_bit_field/src/expmed.c:1377:38: error: invalid suffix 'xmode' on integer constant
v21 = gen_lowpart_common( *(short *)0xmode, v4); 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_split_bit_field/src/expmed.c:1382:18: error: invalid suffix 'xmode' on integer constant
v22 = *(short *)0xmode; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_split_bit_field/src/expmed.c:1384:37: error: invalid suffix 'xmode' on integer constant
v4 = gen_lowpart_common( *(short *)0xmode, v23); 
                                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_split_bit_field/src/expmed.c:1415:31: error: invalid suffix 'orce' on integer constant
v20 = operand_sub*(short *)0xforce( op0, offset, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_split_bit_field/src/expmed.c:1415:52: error: use of undeclared identifier 'machine_mode'
v20 = operand_sub*(short *)0xforce( op0, offset, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
                                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_split_bit_field/src/expmed.c:1415:7: error: use of undeclared identifier 'operand_sub'
v20 = operand_sub*(short *)0xforce( op0, offset, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_split_bit_field/src/expmed.c:1430:55: error: invalid suffix 'xmode' on integer constant
fixed_bit_field = extract_fixed_bit_field( *(short *)0xmode, v4, 0LL, v18, v11, 0LL, 1); 
                                                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_split_bit_field/src/expmed.c:1436:31: error: invalid suffix 'orce' on integer constant
v19 = operand_sub*(short *)0xforce( 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_split_bit_field/src/expmed.c:1439:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( op0->fld[0].rtwint + 2)); 
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_split_bit_field/src/expmed.c:1436:7: error: use of undeclared identifier 'operand_sub'
v19 = operand_sub*(short *)0xforce( 
      ^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_split_bit_field/src/obj/expmed.o] Error 1
